reformatting and resolving warnings. Using lambdas when applicable. Fixed redundancy and unused imports/declarations. Weaker access modifier when possible