@@ -22,12 +22,12 @@ public class BoardUtils {
     public static final boolean[] SECOND_RANK = initRow(48);
     public static final boolean[] FIRST_RANK = initRow(56);
 
-    public static final List<String> ALGEBRAIC_NOTATION = initializeAlgebraicNotation();
-    public static final Map<String, Integer> POSITION_TO_COORDINATE = initializePositionToCoordinateMap();
+    private static final List<String> ALGEBRAIC_NOTATION = initializeAlgebraicNotation();
+    private static final Map<String, Integer> POSITION_TO_COORDINATE = initializePositionToCoordinateMap();
 
     public static final int NUM_TILES = 64;
-    public static final int NUM_TILES_PER_ROW = 8;
-    public static final int START_TILE_INDEX = 0;
+    static final int NUM_TILES_PER_ROW = 8;
+    private static final int START_TILE_INDEX = 0;
 
     public BoardUtils() {
     }
@@ -59,15 +59,14 @@ public class BoardUtils {
     }
 
     private static List<String> initializeAlgebraicNotation() {
-        return Collections.unmodifiableList(Arrays.asList(
-                "a8", "b8", "c8", "d8", "e8", "f8", "g8", "h8",
-                "a7", "b7", "c7", "d7", "e7", "f7", "g7", "h7",
-                "a6", "b6", "c6", "d6", "e6", "f6", "g6", "h6",
-                "a5", "b5", "c5", "d5", "e5", "f5", "g5", "h5",
-                "a4", "b4", "c4", "d4", "e4", "f4", "g4", "h4",
-                "a3", "b3", "c3", "d3", "e3", "f3", "g3", "h3",
-                "a2", "b2", "c2", "d2", "e2", "f2", "g2", "h2",
-                "a1", "b1", "c1", "d1", "e1", "f1", "g1", "h1"));
+        return List.of("a8", "b8", "c8", "d8", "e8", "f8", "g8", "h8",
+                        "a7", "b7", "c7", "d7", "e7", "f7", "g7", "h7",
+                        "a6", "b6", "c6", "d6", "e6", "f6", "g6", "h6",
+                        "a5", "b5", "c5", "d5", "e5", "f5", "g5", "h5",
+                        "a4", "b4", "c4", "d4", "e4", "f4", "g4", "h4",
+                        "a3", "b3", "c3", "d3", "e3", "f3", "g3", "h3",
+                        "a2", "b2", "c2", "d2", "e2", "f2", "g2", "h2",
+                        "a1", "b1", "c1", "d1", "e1", "f1", "g1", "h1");
     }
 
     public static boolean isValid(final int coordinate) {
